# libmpu6050

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  mpu6050.h  mpu6050_core.c  mpu6050_i2cdev.c  mpu6050_i2cdev.h
example/: CMakeLists.txt  print_angles.c
src/: CMakeLists.txt  mpu6050.h  mpu6050_core.c  mpu6050_core.h  mpu6050_i2cdev.c  mpu6050_i2cdev.h  mpu6050_iio.c  mpu6050_iio.h  mpu6050_util.c  mpu6050_util.h
